log/build_2023-09-18_16-03-01/labs_pkg/stdout_stderr.log
running develop
/usr/lib/python3/dist-packages/setuptools/command/easy_install.py:158: EasyInstallDeprecationWarning: easy_install command is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
Removing /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs-pkg.egg-link (link to .)
running egg_info
writing ../../build/labs_pkg/labs_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/labs_pkg/labs_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/labs_pkg/labs_pkg.egg-info/entry_points.txt
writing requirements to ../../build/labs_pkg/labs_pkg.egg-info/requires.txt
writing top-level names to ../../build/labs_pkg/labs_pkg.egg-info/top_level.txt
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
reading manifest file '../../build/labs_pkg/labs_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/labs_pkg/labs_pkg.egg-info/SOURCES.txt'
running build
running build_py
creating /home/teehee/ros2_ws/build/labs_pkg/build
creating /home/teehee/ros2_ws/build/labs_pkg/build/lib
creating /home/teehee/ros2_ws/build/labs_pkg/build/lib/labs_pkg
copying labs_pkg/__init__.py -> /home/teehee/ros2_ws/build/labs_pkg/build/lib/labs_pkg
copying labs_pkg/my_talker.py -> /home/teehee/ros2_ws/build/labs_pkg/build/lib/labs_pkg
running install
running install_lib
creating /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg
copying /home/teehee/ros2_ws/build/labs_pkg/build/lib/labs_pkg/__init__.py -> /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg
copying /home/teehee/ros2_ws/build/labs_pkg/build/lib/labs_pkg/my_talker.py -> /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg
byte-compiling /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg/my_talker.py to my_talker.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg/my_talker.py", line 18
    		self.get_logger().info('Publishing: "Hello World: ' + str(self.counter_) + '"')↪→
    		                                                                               ^
SyntaxError: invalid character '↪' (U+21AA)

Copying ../../build/labs_pkg/labs_pkg.egg-info to /home/teehee/ros2_ws/install/labs_pkg/lib/python3.10/site-packages/labs_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing my_talker script to /home/teehee/ros2_ws/install/labs_pkg/lib/labs_pkg
writing list of installed files to '/home/teehee/ros2_ws/build/labs_pkg/install.log'
